<resources>
    <string name="app_name">Autocord</string>
    <string name="author">by TropicalCoder</string>
    <string name="where">Comments or suggestion?</string>
    <string name="app_desc">Allows Autocord to continue to capture or play audio even when it isn\'t in view.</string>
    <string name="triggerparams">Set trigger parameters…</string>
    <string name="radio_setdb">Set min sensitivity</string>
    <string name="radio_setminfreq">Set min frequency</string>
    <string name="radio_setmaxfreq">Set max frequency</string>

    <string name="text_initialdb">96.3 dB</string>
    <string name="text_initialminfreq">16.0 Hz</string>
    <string name="text_initialmaxfreq">16000.0 Hz</string>

    <string name="radio_setlock">Lock</string>

    <string name="text_initialtime">00:00:00</string>
    <string name="text_initialkb">000 kb</string>

    <string name="radio_monitor">Monitor</string>
    <string name="radio_record">Record</string>
    <string name="radio_play">Play</string>
    <string name="monitoring">Monitoring</string>
    <string name="recording">Recording</string>
    <string name="playing">Playing</string>
    <string name="radio_toggle_start">Start</string>
    <string name="radio_toggle_stop">Stop</string>
    <string name="select_mode">Select mode</string>
    <string name="remote_service_started">Remote service started</string>
    <string name="remote_service_label">Autocord</string>
    <string name="list_header_title">Record log...</string>
    <string name="close">Close</string>
    <string name="setdb">Set sensitivity</string>
    <string name="setminfreq">Set minimum frequency</string>
    <string name="setmaxfreq">Set maximum frequency</string>
    <string name="setup">Setup</string>
    <string name="start">Start</string>
    <string name="Stop">Stop</string>
    <string name="ok">OK</string>
    <string name="capture_time">Time</string>
    <string name="fileoffset">File offset</string>
    <string name="_0_db">0 dB</string>
    <string name="gain_applied">Gain applied</string>
    <string name="pause">Pause</string>
    <string name="unpause">Unpause</string>
    <string name="cancelauto">Stop auto</string>
    <string name="auto_set">Auto set</string>
    <string name="peak_freq">Peak freq</string>
    <string name="peak_db">Peak dB</string>
    <string name="note_val">Note val</string>
    <string name="_0_hz">0 hz</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="export">Save or play audio file</string>
    <string name="duration">Duration</string>
    <string name="radio_simplified">Simplified UI</string>
    <string name="radio_advanced">Advanced UI</string>
    <string name="exporting">Saving audio file...</string>
    <string name="email">Email</string>
    <string name="appnameversion">"Autocord for Android ver. "</string>
    <string name="stop">Stop</string>
    <string name="settings">Set triggered recording</string>
    <string name="view_manual">View Manual</string>
    <string name="export_audio_as">Save audio as...</string>
    <string name="cancel">Cancel</string>
    <string name="exported_files_hdr1">Saved audio files...</string>
    <string name="exported_files_hdr2">Date\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Time\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Duration</string>
    <string name="option_show_info">Show recorded file info</string>
    <string name="current_recording_info">Current recording info</string>
    <string name="option_prefilter">Input filter (Recommended)</string>
    <string name="option_inputboost">Input boost</string>
    <string name="flac">FLAC Encoder</string>
    <string name="aac64k">AAC Ecoder 64K BPS</string>
    <string name="aac128k">AAC Encoder 128K BPS</string>
    <string name="inputlevel">Input level</string>
    <string name="mark_for_delete">Mark for delete on exit?</string>
    <string name="delete_tracks">Permanently delete tracks marked?</string>
    <string name="delete_track">Permanently delete track marked?</string>
    <string name="trash">Delete track</string>
    <string name="share">Share track</string>
    <string name="trigger_on_voice">Trigger on: Voice</string>
    <string name="trigger_on_birds">Trigger on: Birds</string>
    <string name="trigger_on_any">Trigger on: Any</string>
</resources>
