<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/labelSpace"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:padding="8dp"
        android:layout_marginStart="48dp"
        android:autoSizeMaxTextSize="32sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="?attr/colorPrimaryDark"
        android:textColor="@color/colorTealAccent2"
        app:layout_constraintBottom_toTopOf="@+id/radioUIModes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioUIModes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radioTrigger" >

        <RadioButton
            android:id="@+id/radioSimplified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="16sp"
            android:background="?attr/colorPrimaryDark"
            android:checked="true"
            android:maxLines="1"
            android:onClick="onUIModeRadioButtonClicked"
            android:padding="8dp"
            android:text="@string/radio_simplified"
            android:textColor="@color/colorTealAccent2" />

        <RadioButton
            android:id="@+id/radioAdvanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="16sp"
            android:background="?attr/colorPrimaryDark"
            android:maxLines="1"
            android:onClick="onUIModeRadioButtonClicked"
            android:padding="8dp"
            android:text="@string/radio_advanced"
            android:textColor="@color/colorTealAccent2" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioTrigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_prefilter" >

        <RadioButton
            android:id="@+id/radioVoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:background="?attr/colorPrimaryDark"
            android:checked="true"
            android:maxLines="1"
            android:onClick="onTriggerRadioButtonClicked"
            android:padding="8dp"
            android:text="@string/trigger_on_voice"
            android:textColor="@color/colorTealAccent2" />

        <RadioButton
            android:id="@+id/radioBirds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:background="?attr/colorPrimaryDark"
            android:checked="false"
            android:maxLines="1"
            android:onClick="onTriggerRadioButtonClicked"
            android:padding="8dp"
            android:text="@string/trigger_on_birds"
            android:textColor="@color/colorTealAccent2" />

        <RadioButton
            android:id="@+id/radioAny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:background="?attr/colorPrimaryDark"
            android:maxLines="1"
            android:onClick="onTriggerRadioButtonClicked"
            android:padding="8dp"
            android:text="@string/trigger_on_any"
            android:textColor="@color/colorTealAccent2" />

    </RadioGroup>

    <CheckBox android:id="@+id/checkbox_prefilter"
        android:layout_marginTop="24dp"
        android:layout_marginStart="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_prefilter"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="32sp"
        android:autoSizeMinTextSize="16sp"
        android:background="?attr/colorPrimaryDark"
        android:buttonTint="@color/colorTealAccent2"
        android:textColor="@color/colorTealAccent2"
        android:maxLines="1"
        android:onClick="onOptionPrefilterClicked"
        android:checked="true"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_inputboost" />

    <CheckBox android:id="@+id/checkbox_inputboost"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_inputboost"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="32sp"
        android:autoSizeMinTextSize="16sp"
        android:background="?attr/colorPrimaryDark"
        android:buttonTint="@color/colorTealAccent2"
        android:textColor="@color/colorTealAccent2"
        android:maxLines="1"
        android:onClick="onOptionInputBoostClicked"
        android:checked="false"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/radioCodecs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"  />

    <RadioGroup
        android:id="@+id/radioCodecs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <RadioButton
            android:id="@+id/radioAAC64k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:background="?attr/colorPrimaryDark"
            android:checked="true"
            android:maxLines="1"
            android:onClick="onEncoderRadioButtonClicked"
            android:padding="8dp"
            android:text="@string/aac64k"
            android:textColor="@color/colorTealAccent2" />

        <RadioButton
            android:id="@+id/radioAAC128k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:background="?attr/colorPrimaryDark"
            android:checked="false"
            android:maxLines="1"
            android:onClick="onEncoderRadioButtonClicked"
            android:padding="8dp"
            android:text="@string/aac128k"
            android:textColor="@color/colorTealAccent2" />

        <RadioButton
            android:id="@+id/radioFLAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:background="?attr/colorPrimaryDark"
            android:maxLines="1"
            android:onClick="onEncoderRadioButtonClicked"
            android:padding="8dp"
            android:text="@string/flac"
            android:textColor="@color/colorTealAccent2" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>