<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageHelpBtnStart"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_start"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"

            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="Start button" />

        <TextView
            android:id="@+id/view_imageHelpBtnStart"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/start" />

        <ImageButton
            android:id="@+id/imageHelpBtnStop"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_stop_black"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="Stop button" />

        <TextView
            android:id="@+id/view_imageHelpBtnStop"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/stop" />

        </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageHelpBtnPause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_pause"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="Pause button" />

        <TextView
            android:id="@+id/view_imageHelpBtnPause"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/pause" />

        <ImageButton
            android:id="@+id/imageHelpBtnUnPause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_pause_circle_filled_black"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="@string/unpause" />

        <TextView
            android:id="@+id/view_imageHelpBtnUnPause"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/unpause" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageHelpBtnExport"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_file_copy"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="@string/export" />

        <TextView
            android:id="@+id/view_imageHelpBtnExport"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/export" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageHelpBtnShare"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_share"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="@string/trash" />

        <TextView
            android:id="@+id/view_imageHelpBtnShare"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/share" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageHelpBtnTrash"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_trash"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="@string/trash" />

        <TextView
            android:id="@+id/view_imageHelpBtnTrash"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/trash" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageHelpBtnSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_settings_black"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="@string/settings" />

        <TextView
            android:id="@+id/view_imageHelpBtnSettings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <ImageButton
            android:id="@+id/imageHelpBtnInfo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_info"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="@string/current_recording_info" />

        <TextView
            android:id="@+id/view_imageHelpBtnInfo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/current_recording_info" />

    </LinearLayout>
	
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageHelpBtnAutoOn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_adjust"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="@string/auto_set" />

        <TextView
            android:id="@+id/view_imageHelpBtnAutoOn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/auto_set" />

        <ImageButton
            android:id="@+id/imageHelpBtnAutoOff"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_cancel"
            android:background="@drawable/ic_round_background"
            android:tint="@color/colorTealAccent2"
            android:padding="4dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:scaleType="fitCenter"
            android:elevation="3dp"
            android:contentDescription="@string/cancelauto" />

        <TextView
            android:id="@+id/view_imageHelpBtnAutoOff"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="@color/colorTealAccent2"
            android:padding="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/cancelauto" />

    </LinearLayout>
	
    <Button
        android:id="@+id/btnOpenHelpDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:autoSizeMaxTextSize="18sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:textAlignment="center"
        android:text="@string/view_manual"
        android:textAllCaps="false"
        android:clickable="true"
        android:onClick="onOpenHelpDoc"
        android:background="?attr/colorPrimaryDark"
        android:textColor="@color/colorTealAccent2" />

   </LinearLayout>
 </ScrollView>
